AArch64: Relax alignment requirement for byte_map_base

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b120
    • aarch64

        AArch64 expects the card table base to be page aligned, and asserts that. Unfortunately (because asserts are compiled out in release code) if this assumption is ever violated in production code we won't see it. Instead, we will see mysterious segfaults.

        We have seen this fail in OpenJDK 7.

        It makes more sense to allow the base to be unaligned.

              Assignee:
              Andrew Haley
              Reporter:
              Andrew Haley
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: