8155100: AArch64: Relax alignment requirement for byte_map_base

Reviewed-by: roland